# Multi-Agent_Swarm_Intelligence_Tracking

./: .gitignore  API.md  GAP.md  Makefile  README.md  SIMULATION.md  UI_DESIGN.md  pyproject.toml
Concept_Paper/: AEGIS_AI_ConceptPaper.docx
System_Design/: ARCHITECTURE.md  BRD.md  CLAUDE.md  DECISIONS.md  INFRASTRUCTURE.md  TESTING.md
core/: __init__.py  constants.py
core/agents/: __init__.py  base_agent.py  coordinator.py  swarm_agent.py  tracker_agent.py
core/simulation/: __init__.py  drone.py  scenarios.py  swarm_sim.py
core/swarm/: __init__.py  behavior.py  graph.py  reynolds.py
core/tracking/: __init__.py  ekf.py  fusion.py  hungarian.py  track.py
services/: __init__.py
services/coordinator/: main.py
services/gateway/: main.py
services/ingest/: main.py
services/swarm_intel/: main.py
services/tracker/: main.py
tests/: __init__.py
tests/scenarios/: __init__.py  test_decoy_strike.py  test_saturation_attack.py
tests/unit/: __init__.py  test_behavior.py  test_ekf.py  test_fusion.py  test_graph.py  test_hungarian.py  test_reynolds.py  test_track.py
ui/: __init__.py  app.py  theme.py
ui/pages/: 01_live_ops.py  02_swarm_graph.py  03_behavior.py  04_scenarios.py  05_analytics.py
